--- CHANGELOG ---
--- Future ---
    * Added option to limit the size of the result ("result_max_size"), default set to 2GB.
    * Added method ResultDymolaBinary.get_variables_data. Included some minor refactorization.
      The new method allows for retrieving partial trajectories, and multiple trajectories at once.

--- PyFMI-2.14.0 ---
    * Updated the error message displayed when loading FMUs with needsExecutionTool set to True.
    * Loading unzipped FMUs now also works with relative paths.
    * Enabled setting logging categories in FMI2 via "set_debug_logging".
    * XML Logs exceeding maximal size will now be truncated to start/end of the last CAPI call which did not exceed the maximal log size.
    * Changed custom result handling for the Master algorithm to instead use a single ResultHandler for each model.
      A dictionary of the form {model: ResultHandler} needs to be supplied to the option.

--- PyFMI-2.13.1 ---
    * Numpy 2.x support
    * Allow to build without distutils for Python>=3.12 support

--- PyFMI-2.13.0 ---
    * Upgraded to Cython3.

--- PyFMI-2.12.0 ---
    * Removed utilities related to the obsolete FMUX model interface.
    * Removed no longer required dependency on lxml.
    * Unified result handling and allowed the master algorithm to use all available result handlers
    * Added new option "result_downsampling_factor" for simulation of CS-FMUs, including the Master algorithm.
      Solution will only be stored every "result_downsampling_factor"-nth communication point.

--- PyFMI-2.11.0 ---
    * Refactored result handling for dynamic_diagnostics. It is now possible use dynamic_diagnostics with a custom result handler.
    * Migrated some diagnostics functionality into a new file: src/common/diagnostics.py. This should be seamless.
    * pyfmi.common.diagnostics_prefix has been moved to pyfmi.common.diagnostics as DIAGNOSTICS_PREFIX.

--- PyFMI-2.10.4 ---
    * Added 'result_handling' = None as option, deprecated 'none'.