@@ -41,6 +41,7 @@ from pyfmi.common import encode, decode
 from pyfmi.common.diagnostics import DIAGNOSTICS_PREFIX, DiagnosticsBase
 
 SYS_LITTLE_ENDIAN = sys.byteorder == 'little'
+NCP_LARGE = 5000
 
 class Trajectory:
     """
@@ -1757,6 +1758,7 @@ class ResultHandlerMemory(ResultHandler):
     def __init__(self, model, delimiter=";"):
         super().__init__(model)
         self.supports['result_max_size'] = True
+        self._first_point = True
         
     def simulation_start(self):
         """
@@ -1794,6 +1796,12 @@ class ResultHandlerMemory(ResultHandler):
         """
         model = self.model
 
+        previous_size = 0
+        if self._first_point:
+            previous_size = sys.getsizeof(self.time_sol) + sys.getsizeof(self.real_sol) + \
+                           sys.getsizeof(self.int_sol)  + sys.getsizeof(self.bool_sol) + \
+                           sys.getsizeof(self.param_sol)
+
         #Retrieves the time-point
         self.time_sol += [model.time]
         self.real_sol += [model.get_real(self.real_var_ref)]
@@ -1807,14 +1815,11 @@ class ResultHandlerMemory(ResultHandler):
         max_size = self.options.get("result_max_size", None)
         if max_size is not None:
             current_size = sys.getsizeof(self.time_sol) + sys.getsizeof(self.real_sol) + \
-                            sys.getsizeof(self.int_sol)  + sys.getsizeof(self.bool_sol) + \
-                            sys.getsizeof(self.param_sol)
+                           sys.getsizeof(self.int_sol)  + sys.getsizeof(self.bool_sol) + \
+                           sys.getsizeof(self.param_sol)
             
-            if current_size > max_size:
-                raise ResultSizeError("Maximum size of the result reached (limit: %g GB) at time t=%g. " 
-                                  "To change the maximum allowed result size, please use the option " 
-                                  "'result_max_size', consider reducing the number of communication "
-                                  "points alternatively the number of variables to store result for."%(max_size/1024**3, self.model.time))
+            verify_result_size(self._first_point, current_size, previous_size, max_size, self.options["ncp"], self.model.time)
+            self._first_point = False
 
     def get_result(self):
         """
@@ -1841,6 +1846,7 @@ class ResultHandlerCSV(ResultHandler):
         self.supports['result_max_size'] = True
         self.delimiter = delimiter
         self._current_file_size = 0
+        self._first_point = True
 
     def _write(self, msg):
         self._current_file_size = self._current_file_size+len(msg)
@@ -1972,6 +1978,7 @@ class ResultHandlerCSV(ResultHandler):
         """
         model = self.model
         delimiter = self.delimiter
+        previous_size = self._current_file_size
 
         #Retrieves the time-point
         t = model.time
@@ -1997,14 +2004,9 @@ class ResultHandlerCSV(ResultHandler):
             self._write(cont_str[:-1]+"\n")
 
         max_size = self.options.get("result_max_size", None)
-        if max_size is not None and self._current_file_size > max_size:
-            #Make the file consistent
-            self.simulation_end()
-            raise ResultSizeError("Maximum size of the result reached (limit: %g GB) at time t=%g. " 
-                                  "To change the maximum allowed result size, please use the option " 
-                                  "'result_max_size', consider reducing the number of communication "
-                                  "points alternatively the number of variables to store result for."%(max_size/1024**3, self.model.time))
-
+        if max_size is not None:
+            verify_result_size(self._first_point, self._current_file_size, previous_size, max_size, self.options["ncp"], self.model.time)
+            self._first_point = False
 
     def simulation_end(self):
         """
@@ -2032,6 +2034,7 @@ class ResultHandlerFile(ResultHandler):
         super().__init__(model)
         self.supports['result_max_size'] = True
         self._current_file_size = 0
+        self._first_point = True
 
     def initialize_complete(self):
         pass
@@ -2407,6 +2410,7 @@ class ResultHandlerFile(ResultHandler):
         """
         data_order = self._data_order
         model = self.model
+        previous_size = self._current_file_size
 
         #Retrieves the time-point
         r = model.get_real(self.real_var_ref)
@@ -2430,12 +2434,9 @@ class ResultHandlerFile(ResultHandler):
         self.nbr_points+=1
 
         max_size = self.options.get("result_max_size", None)
-        if max_size is not None and self._current_file_size > max_size:
-            self.simulation_end()
-            raise ResultSizeError("Maximum size of the result reached (limit: %g GB) at time t=%g. " 
-                                  "To change the maximum allowed result size, please use the option " 
-                                  "'result_max_size', consider reducing the number of communication "
-                                  "points alternatively the number of variables to store result for."%(max_size/1024**3, self.model.time))
+        if max_size is not None:
+            verify_result_size(self._first_point, self._current_file_size, previous_size, max_size, self.options["ncp"], self.model.time)
+            self._first_point = False
 
     def simulation_end(self):
         """
@@ -2552,6 +2553,8 @@ class ResultHandlerBinaryFile(ResultHandler):
         self.supports['dynamic_diagnostics'] = True
         self.supports['result_max_size']     = True
         self.data_2_header_end_position = 0
+        self._size_point = -1
+        self._first_point = True
 
     def _data_header(self, name, nbr_rows, nbr_cols, data_type):
         if data_type == "int":
@@ -2750,7 +2753,11 @@ class ResultHandlerBinaryFile(ResultHandler):
         """
         Writes the current status of the model to file.
         """
+        if self._size_point == -1:
+            pos = self._file.tell()
         self.dump_data_internal.save_point()
+        if self._size_point == -1:
+            self._size_point = self._file.tell() - pos
 
         #Increment number of points
         self.nbr_points += 1
@@ -2760,7 +2767,7 @@ class ResultHandlerBinaryFile(ResultHandler):
 
     def diagnostics_point(self, diag_data):
         """ Generates a data point for diagnostics data by invoking the util function save_diagnostics_point. """
-        self.dump_data_internal.save_diagnostics_point(diag_data)
+        self.dump_data_internal.save_diagnostics_point(diag_data)    
         self.nbr_diag_points += 1
         self._make_consistent(diag=True)
 
@@ -2795,11 +2802,11 @@ class ResultHandlerBinaryFile(ResultHandler):
         f.seek(file_pos)
 
         max_size = self.options.get("result_max_size", None)
-        if max_size is not None and file_pos > max_size:
-            raise ResultSizeError("Maximum size of the result reached (limit: %g GB) at time t=%g. " 
-                                  "To change the maximum allowed result size, please use the option " 
-                                  "'result_max_size', consider reducing the number of communication "
-                                  "points alternatively the number of variables to store result for."%(max_size/1024**3, self.model.time))
+        if max_size is not None:
+            verify_result_size(self._first_point, file_pos, file_pos-self._size_point, max_size, self.options["ncp"], self.model.time)
+            #We can go in here before we've stored a full result point (due to storing diagnostic points). So check that a point has been fully stored
+            if self._first_point and self._size_point > 0:
+                self._first_point = False
 
     def simulation_end(self):
         """
@@ -2822,6 +2829,22 @@ class ResultHandlerBinaryFile(ResultHandler):
         subclass of ResultBase.
         """
         return ResultDymolaBinary(self.file_name)
+
+def verify_result_size(first_point, current_size, previous_size, max_size, ncp, time):
+    if first_point:
+        point_size = current_size - previous_size
+        estimate = ncp*point_size + previous_size
+        if estimate > max_size:
+            msg = "The result is estimated to exceed the allowed maximum size (limit: %g GB, estimate: %g GB). "%(max_size/1024**3, estimate/1024**3)
+            if ncp > NCP_LARGE:
+                msg = msg + "The number of result points is large (%d), consider reducing the number of points. "%ncp
+            raise ResultSizeError(msg + "To change the maximum allowed result file size, please use the option 'result_max_size'")
+
+    if current_size > max_size:
+        raise ResultSizeError("Maximum size of the result reached (limit: %g GB) at time t=%g. " 
+                            "To change the maximum allowed result size, please use the option " 
+                            "'result_max_size' or consider reducing the number of communication "
+                            "points alternatively the number of variables to store result for."%(max_size/1024**3, time))
 
 def get_result_handler(model, opts):
     result_handler = None
